// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityForm should render ActivityForm correctly 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Activity Name"
      type="text"
      value=""
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Teacher"
      type="text"
      value=""
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Room"
      type="text"
      value=""
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Class Number"
      step="1"
      type="number"
      value=""
    />
    <select
      className="form__select"
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="form__selectOption"
        value=""
      >
        Pick a day
      </option>
      <option
        className="form__selectOption"
        key="monday"
        value="monday"
      >
        monday
      </option>
      <option
        className="form__selectOption"
        key="tuesday"
        value="tuesday"
      >
        tuesday
      </option>
      <option
        className="form__selectOption"
        key="wednesday"
        value="wednesday"
      >
        wednesday
      </option>
      <option
        className="form__selectOption"
        key="thursday"
        value="thursday"
      >
        thursday
      </option>
      <option
        className="form__selectOption"
        key="friday"
        value="friday"
      >
        friday
      </option>
      <option
        className="form__selectOption"
        key="saturday"
        value="saturday"
      >
        saturday
      </option>
      <option
        className="form__selectOption"
        key="sunday"
        value="sunday"
      >
        sunday
      </option>
    </select>
    <button
      type="submit"
    >
      Add Activity
    </button>
  </form>
</div>
`;

exports[`ActivityForm should render ActivityForm with testState 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Activity Name"
      type="text"
      value="polski"
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Teacher"
      type="text"
      value="Malski"
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Room"
      type="text"
      value="hell"
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Class Number"
      step="1"
      type="number"
      value="1"
    />
    <select
      className="form__select"
      onChange={[Function]}
      required={true}
      value="monday"
    >
      <option
        className="form__selectOption"
        value=""
      >
        Pick a day
      </option>
      <option
        className="form__selectOption"
        key="monday"
        value="monday"
      >
        monday
      </option>
      <option
        className="form__selectOption"
        key="tuesday"
        value="tuesday"
      >
        tuesday
      </option>
      <option
        className="form__selectOption"
        key="wednesday"
        value="wednesday"
      >
        wednesday
      </option>
      <option
        className="form__selectOption"
        key="thursday"
        value="thursday"
      >
        thursday
      </option>
      <option
        className="form__selectOption"
        key="friday"
        value="friday"
      >
        friday
      </option>
      <option
        className="form__selectOption"
        key="saturday"
        value="saturday"
      >
        saturday
      </option>
      <option
        className="form__selectOption"
        key="sunday"
        value="sunday"
      >
        sunday
      </option>
    </select>
    <button
      type="submit"
    >
      Add Activity
    </button>
  </form>
</div>
`;

exports[`ActivityForm should render error on blur of classNo input 1`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of classNo input 2`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg="Required"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
          <p>
            Required
          </p>
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of name input 1`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of name input 2`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg="Required"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
          <p>
            Required
          </p>
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of room input 1`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of room input 2`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg="Required"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
          <p>
            Required
          </p>
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of teacher input 1`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should render error on blur of teacher input 2`] = `
<ActivityForm
  activity={
    Object {
      "classNo": "",
      "day": "",
      "name": "",
      "room": "",
      "teacher": "",
    }
  }
  on={true}
  onSubmit={[Function]}
>
  <div>
    <form
      className="form"
      onSubmit={[Function]}
    >
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Activity Name"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Activity Name"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg="Required"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Teacher"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Teacher"
            type="text"
            value=""
          />
          <p>
            Required
          </p>
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Room"
        type="text"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Room"
            type="text"
            value=""
          />
        </div>
      </Input>
      <Input
        errorMsg=""
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Class Number"
        step="1"
        type="number"
        value=""
      >
        <div>
          <input
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Class Number"
            type="number"
            value=""
          />
        </div>
      </Input>
      <select
        className="form__select"
        onChange={[Function]}
        required={true}
        value=""
      >
        <option
          className="form__selectOption"
          value=""
        >
          Pick a day
        </option>
        <option
          className="form__selectOption"
          key="monday"
          value="monday"
        >
          monday
        </option>
        <option
          className="form__selectOption"
          key="tuesday"
          value="tuesday"
        >
          tuesday
        </option>
        <option
          className="form__selectOption"
          key="wednesday"
          value="wednesday"
        >
          wednesday
        </option>
        <option
          className="form__selectOption"
          key="thursday"
          value="thursday"
        >
          thursday
        </option>
        <option
          className="form__selectOption"
          key="friday"
          value="friday"
        >
          friday
        </option>
        <option
          className="form__selectOption"
          key="saturday"
          value="saturday"
        >
          saturday
        </option>
        <option
          className="form__selectOption"
          key="sunday"
          value="sunday"
        >
          sunday
        </option>
      </select>
      <button
        type="submit"
      >
        Add Activity
      </button>
    </form>
  </div>
</ActivityForm>
`;

exports[`ActivityForm should set errorMsg in inputs after invalid form submition 1`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Activity Name"
      type="text"
      value=""
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Teacher"
      type="text"
      value=""
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Room"
      type="text"
      value=""
    />
    <Input
      errorMsg=""
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Class Number"
      step="1"
      type="number"
      value=""
    />
    <select
      className="form__select"
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="form__selectOption"
        value=""
      >
        Pick a day
      </option>
      <option
        className="form__selectOption"
        key="monday"
        value="monday"
      >
        monday
      </option>
      <option
        className="form__selectOption"
        key="tuesday"
        value="tuesday"
      >
        tuesday
      </option>
      <option
        className="form__selectOption"
        key="wednesday"
        value="wednesday"
      >
        wednesday
      </option>
      <option
        className="form__selectOption"
        key="thursday"
        value="thursday"
      >
        thursday
      </option>
      <option
        className="form__selectOption"
        key="friday"
        value="friday"
      >
        friday
      </option>
      <option
        className="form__selectOption"
        key="saturday"
        value="saturday"
      >
        saturday
      </option>
      <option
        className="form__selectOption"
        key="sunday"
        value="sunday"
      >
        sunday
      </option>
    </select>
    <button
      type="submit"
    >
      Add Activity
    </button>
  </form>
</div>
`;

exports[`ActivityForm should set errorMsg in inputs after invalid form submition 2`] = `
<div>
  <form
    className="form"
    onSubmit={[Function]}
  >
    <Input
      errorMsg="Required"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Activity Name"
      type="text"
      value=""
    />
    <Input
      errorMsg="Required"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Teacher"
      type="text"
      value=""
    />
    <Input
      errorMsg="Required"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Room"
      type="text"
      value=""
    />
    <Input
      errorMsg="Required"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Class Number"
      step="1"
      type="number"
      value=""
    />
    <select
      className="form__select"
      onChange={[Function]}
      required={true}
      value=""
    >
      <option
        className="form__selectOption"
        value=""
      >
        Pick a day
      </option>
      <option
        className="form__selectOption"
        key="monday"
        value="monday"
      >
        monday
      </option>
      <option
        className="form__selectOption"
        key="tuesday"
        value="tuesday"
      >
        tuesday
      </option>
      <option
        className="form__selectOption"
        key="wednesday"
        value="wednesday"
      >
        wednesday
      </option>
      <option
        className="form__selectOption"
        key="thursday"
        value="thursday"
      >
        thursday
      </option>
      <option
        className="form__selectOption"
        key="friday"
        value="friday"
      >
        friday
      </option>
      <option
        className="form__selectOption"
        key="saturday"
        value="saturday"
      >
        saturday
      </option>
      <option
        className="form__selectOption"
        key="sunday"
        value="sunday"
      >
        sunday
      </option>
    </select>
    <button
      type="submit"
    >
      Add Activity
    </button>
  </form>
</div>
`;
